obter medalhas por pais